--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
 </head>
 <body>
 <h1>Aastha ka badhiya profile</h1>
+<p>Aasthaa ki foto</p>
+<p> aastha ka resume </p>
+<p> aastha ki chitthi patri </p>
 </body>
 </html>
