--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="row offset-1">
     <div class="col-md-2 px-4 py-5">
-      <img class="rounded-circle col-12" src="assets/prof_pic.jpeg"/>
+      <img class="border border-5 border-light col-12 rounded-circle shadow shadow-lg" src="assets/prof_pic.jpeg"/>
     </div>
     <div class="col-md-7 p-5">
       <h2>About</h2>
