--- a/research.html
+++ b/research.html
@@ -6,6 +6,23 @@
   </head>
   <body>
 
+    <style>
+      h1 {
+        margin-top: 35px;
+      }
+      h2 {
+        margin-top: 35px;
+        font-weight: 200;
+      }
+      h3 {
+        margin-top: 20px;
+        font-size: 25px;
+      }
+      h4 {
+        margin-top: 15px;
+      }
+    </style>
+
     <!--navbar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
@@ -16,10 +33,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link " href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="research.html">Research</a>
+              <a class="nav-link active" href="research.html">Research</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="#">Teaching</a>
@@ -36,30 +53,15 @@
     <!--navbar-end-->
 
     <div class="row offset-1">
-    <div class="col-md-2 px-4 py-5 text-center">
-      <img class="border border-5 border-light col-12 mb-3 shadow shadow-sm" src="assets/prof_pic.jpg"/>
-      Job market candidate, Department of Economics, Boston College
-    </div>
     <div class="col-md-7 p-5">
-      <h2>Home</h2>
-      <p>
-        Hello and welcome to my page. I am a Ph.D. candidate Department of Economics at Boston College. My research interests are in the fields of Industrial Organization, and Energy and Environmental Economics where I use both structural and reduced form methods. I study/evaluate subsidy designs to encourage adoption of renewable energy technologies to address climate change.
-      </p>
-      <p>
-        My academic research is to study subsidy design for renewable energy technologies based on consumer preferences. (editing this)
-      </p>
-      <p>
-        I am on the job market during the academic year 2023-24.
+      <h1>Research</h1>
 
-      </p>
-      <br />
-      <h5>Contact</h5>
-      Department of Economics <br />
-      Boston College<br />
-      Address: 140 Commonwealth Avenue, Chestnut Hill, MA 02467<br />
-      Email: aastha.malhotra@bc.edu<br />
-      Phone: 508 615 2182<br />
+      <h2>Job Market Paper</h2>
+      <h3>Optimizing Input Vs. Output Subsidies for Solar: Site Quality Vs. Personal Taste</h3>
+      <p>I study the tradeoffs between input (upfront) and output (production-based) subsidies for solar Photovoltaic (PV) adoption. While input subsidies can be cost effective due to adopters' intertemporal discounting (impatience), output subsidies are better targeted to site quality. Using data from the California Solar Initiative, I estimate a dynamic discrete choice model of solar adoption, then simulate counterfactual subsidy policies to find an optimal balance of input and output subsidy rates. The model estimates adopters' discounting factor and distribution of tastes, and hinges critically on the observed distribution of site quality as data. Considerable variation in personal taste (taste to be green) implies that the output subsidy can play an important role in incentivizing otherwise hesitant property owners with high production potential, while not overpaying eager adopters with lower potential.</p>
 
+      <h2>Work in Progress</h2>
+      <h3>Electricity Prices and Solarization: The Case of California</h3>
     </div>
   </div>
   </body>
