--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
     </nav>
     <!--navbar-end-->
 
-    <div class="row offset-1">
-    <div class="col-md-2 px-4 py-5 text-center">
-      <img class="border border-5 border-light col-12 mb-3 shadow shadow-sm" src="assets/prof_pic.jpg"/>
-      Job market candidate, Department of Economics, Boston College
+    <div class="row ">
+    <div class="col-md-4 px-4 py-5 text-center">
+      <div class="col-md-7 mx-auto">
+        <img class="border border-5 border-light col-12 mb-3 shadow shadow-sm" src="assets/prof_pic.jpg"/>
+        Job Market Candidate, Department of Economics, Boston College
+      </div>
     </div>
-    <div class="col-md-7 p-5">
+    <div class="col-md-6 p-5">
       <h2>Home</h2>
       <p>
         Hello and welcome to my page. I am a Ph.D. candidate Department of Economics at Boston College. My research interests are in the fields of Industrial Organization, and Energy and Environmental Economics where I use both structural and reduced form methods. I study/evaluate subsidy designs to encourage adoption of renewable energy technologies to address climate change.
