--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--navbar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Aastha Malhotra</a>
+        <!-- <a class="navbar-brand" href="#">Aastha Malhotra</a> -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -38,8 +38,9 @@
     <div class="row ">
     <div class="col-md-4 px-4 py-5 text-center">
       <div class="col-md-7 mx-auto">
-        <img class="border border-5 border-light col-12 mb-3 shadow shadow-sm" src="assets/prof_pic.jpg"/>
-        Job Market Candidate, Department of Economics, Boston College
+        <div><img class="border border-5 border-light col-12 mb-3 shadow shadow-sm" src="assets/prof_pic.jpg"/></div>
+        <div class="border-bottom fs-1 mb-3 pb-2">Aastha Malhotra</div>
+        <div>Job Market Candidate, Department of Economics, Boston College</div>
       </div>
     </div>
     <div class="col-md-6 p-5">
