--- a/index.html
+++ b/index.html
@@ -39,29 +39,22 @@
     <div class="col-md-4 px-4 py-5 text-center">
       <div class="col-md-7 mx-auto">
         <div><img class="border border-5 border-light col-12 mb-3 shadow shadow-sm" src="assets/prof_pic.jpg"/></div>
-        <div class="border-bottom fs-1 mb-3 pb-2">Aastha Malhotra</div>
+        <div class="border-bottom fs-3 mb-3 pb-2">Aastha Malhotra</div>
         <div>Job Market Candidate, Department of Economics, Boston College</div>
       </div>
     </div>
     <div class="col-md-6 p-5">
-      <h2>Home</h2>
+      <h2>About</h2>
       <p>
-        Hello and welcome to my page. I am a Ph.D. candidate Department of Economics at Boston College. My research interests are in the fields of Industrial Organization, and Energy and Environmental Economics where I use both structural and reduced form methods. I study/evaluate subsidy designs to encourage adoption of renewable energy technologies to address climate change.
-      </p>
-      <p>
-        My academic research is to study subsidy design for renewable energy technologies based on consumer preferences. (editing this)
+        Hello and welcome to my page. I am a Ph.D. candidate Department of Economics at Boston College. My research interests are in the fields of Industrial Organization, and Energy and Environmental Economics, where I use both structural and reduced form methods. I evaluate subsidy designs to encourage adoption of renewable energy technology.
       </p>
       <p>
         I am on the job market during the academic year 2023-24.
-
       </p>
       <br />
       <h5>Contact</h5>
-      Department of Economics <br />
-      Boston College<br />
-      Address: 140 Commonwealth Avenue, Chestnut Hill, MA 02467<br />
       Email: aastha.malhotra@bc.edu<br />
-      Phone: 508 615 2182<br />
+      Phone: (508) 615 2182<br />
 
     </div>
   </div>
