--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <li class="nav-item">
               <a class="nav-link" href="research.html">Research</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="teaching.html">Teaching</a>
+            </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="#">Teaching</a>
             </li> -->
