--- a/research.html
+++ b/research.html
@@ -38,6 +38,9 @@
             <li class="nav-item">
               <a class="nav-link active" href="research.html">Research</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link " href="teaching.html">Teaching</a>
+            </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="#">Teaching</a>
             </li> -->
