--- a/research.html
+++ b/research.html
@@ -33,19 +33,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link " href="index.html">Home</a>
+              <a class="nav-link " style="color: #8a100b;" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="research.html">Research</a>
+              <a class="nav-link active" style="color: #8a100b;" href="research.html">Research</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="teaching.html">Teaching</a>
+              <a class="nav-link " style="color: #8a100b;" href="teaching.html">Teaching</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="#">Teaching</a>
             </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="#">CV</a>
+              <a class="nav-link" style="color: #8a100b;" href="assets/CV_Aastha_Malhotra.pdf">CV</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
