--- a/teaching.html
+++ b/teaching.html
@@ -6,29 +6,46 @@
   </head>
   <body>
 
+    <style>
+      h1 {
+        margin-top: 35px;
+      }
+      h2 {
+        margin-top: 35px;
+        font-weight: 200;
+      }
+      h3 {
+        margin-top: 20px;
+        font-size: 25px;
+      }
+      h4 {
+        margin-top: 15px;
+      }
+    </style>
+
     <!--navbar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <!-- <a class="navbar-brand" href="#">Aastha Malhotra</a> -->
+        <a class="navbar-brand" href="#">Aastha Malhotra</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" style="color: #8a100b;" aria-current="page" href="#">Home</a>
+              <a class="nav-link " style="color: #8a100b;" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" style="color: #8a100b;" href="research.html">Research</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" style="color: #8a100b;" href="teaching.html">Teaching</a>
+              <a class="nav-link active" style="color: #8a100b;" href="teaching.html">Teaching</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="#">Teaching</a>
             </li> -->
             <li class="nav-item">
-              <a class="nav-link" style="color: #8a100b;" href="assets/CV_Aastha_Malhotra.pdf">CV</a>
+              <a class="nav-link" href="assets/CV_Aastha_Malhotra.pdf">CV</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
@@ -38,26 +55,28 @@
     </nav>
     <!--navbar-end-->
 
-    <div class="row ">
-    <div class="col-md-4 px-4 py-5 text-center">
-      <div class="col-md-7 mx-auto">
-        <div><img class="border border-5 border-light col-12 mb-3 shadow shadow-sm" src="assets/prof_pic.jpg"/></div>
-        <div class="border-bottom fs-3 mb-3 pb-2">Aastha Malhotra</div>
-        <div>Job Market Candidate, Department of Economics, Boston College</div>
-      </div>
-    </div>
-    <div class="col-md-6 p-5">
-      <h2>About</h2>
-      <p>
-        Hello and welcome to my page. I am a Ph.D. candidate at the Department of Economics at Boston College. My research interests are in the fields of Industrial Organization, and Energy and Environmental Economics, where I use both structural and reduced form methods. I evaluate subsidy designs to encourage adoption of renewable energy technology.
-      </p>
-      <p>
-        I am on the job market during the academic year 2023-24.
-      </p>
-      <br />
-      <h5>Contact</h5>
-      <i>Email:</i> aastha.malhotra@bc.edu<br />
-      <i>Phone:</i> (508) - 615 - 2182<br />
+    <div class="row offset-1">
+    <div class="col-md-11 p-5">
+      <h1>Teaching</h1>
+
+      <h3>Boston College</h3>
+      <p>I was awarded the Donald J. White Teaching Excellence Award in 2022.</p>
+      <h2>Teaching Assistant      </h2>
+      <p>(Undergraduate level)</p>
+      Principles of Economics (Fall 2021) <br/>
+      Statistics Theory (Spring 2021)<br/>
+      Development Economics (Fall 2018, Fall 2019, Spring 2020)<br/>
+      <h2>Lab Instructor</h2>
+      (Undergraduate level)<br/>
+      Statistics Lab (Fall 2020, Spring 2022) <br/>
+
+      <h2>Tutor       </h2>
+      (Graduate level)<br/>
+      Microeconomics Theory (Fall 2017, Spring 2018, Summer 2018)<br/>
+      Macroeconomics Theory (Fall 2017, Spring 2018, Summer 2018)<br/>
+      Math for Economics (Fall 2017, Spring 2018, Summer 2018)<br/><br/>
+
+      Find a summary of my teaching evaluations here.<br/>
 
     </div>
   </div>
