--- a/teaching.html
+++ b/teaching.html
@@ -45,7 +45,7 @@
               <a class="nav-link" href="#">Teaching</a>
             </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="assets/CV_Aastha_Malhotra.pdf">CV</a>
+              <a class="nav-link" style="color: #8a100b;" href="assets/CV_Aastha_Malhotra.pdf">CV</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
