--- a/research.html
+++ b/research.html
@@ -60,7 +60,7 @@
       <h1>Research</h1>
 
       <h2>Job Market Paper</h2>
-      <h3>Optimizing Input Vs. Output Subsidies for Solar: Site Quality Vs. Personal Taste</h3>
+      <h3 href="https://drive.google.com/file/d/1CmCGKZxTyUFvFshijhIByYvFoTPYOdDj/view">Optimizing Input Vs. Output Subsidies for Solar: Site Quality Vs. Personal Taste</h3>
       <p>I study the tradeoffs between input (upfront) and output (production-based) subsidies for solar Photovoltaic (PV) adoption. While input subsidies can be cost effective due to adopters' intertemporal discounting (impatience), output subsidies are better targeted to site quality. Using data from the California Solar Initiative, I estimate a dynamic discrete choice model of solar adoption, then simulate counterfactual subsidy policies to find an optimal balance of input and output subsidy rates. The model estimates adopters' discounting factor and distribution of tastes, and hinges critically on the observed distribution of site quality as data. Considerable variation in personal taste (taste to be green) implies that the output subsidy can play an important role in incentivizing otherwise hesitant property owners with high production potential, while not overpaying eager adopters with lower potential.</p>
 
       <h2>Work in Progress</h2>
